fixed header-blog spacing

--- a/_sass/modules/_header.scss
+++ b/_sass/modules/_header.scss
@@ -149,7 +149,7 @@
             padding: 5px 20px;
             border-radius: 20px;
             position: relative;
-            margin-top: 6px;
+            margin-top: 3px;
 
             transition: 500ms;
 
